fixed issue with fireworks not scrolling on mobile

--- a/public/styles/site.css
+++ b/public/styles/site.css
@@ -787,7 +787,7 @@ section {
 }
 
 canvas {
-	position:absolute;
+	position:fixed;
 	top:0;
 	left:0;
 	width: 100%;
